Fix Background Img not showing

--- a/css/styles.css
+++ b/css/styles.css
@@ -84,7 +84,7 @@ a:hover{
   text-align: center;
   width: 100%;
   height: 80vh;
-  background-image: url("D:/Web Dev/Practice Projects/Frontend/blogr-landing-page-main/images/bg-pattern-intro.svg"), linear-gradient(to left, hsl(13, 100%, 72%), hsl(353, 100%, 62%));
+  background-image: url("../images/bg-pattern-intro.svg"), linear-gradient(to left, hsl(13, 100%, 72%), hsl(353, 100%, 62%));
   position: relative;
   background-position: center;
   background-size: 250%;
@@ -198,7 +198,7 @@ h1{
   width: 100%;
   background: hsl(237, 17%, 21%);
   height: 50vh;
-  background-image: url("D:/Web Dev/Practice Projects/Frontend/blogr-landing-page-main/images/bg-pattern-circles.svg");
+  background-image: url("../images/bg-pattern-circles.svg");
   background-position: left;
   background-size: 50%;
   background-repeat: no-repeat;
